--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,24 @@
-#head {
+#head
+{
     padding: 80px 0 0 0;
     color: #fff;
     font-family: Arial, sans-serif;
 }
 
-#head img {
+#head img
+{
     border-radius: 50%;
     max-width: 150px;
 }
 
-.profile:hover {
+.profile:hover
+{
+    /*放大*/
     transform: scale(1.1);
 }
 
-body {
+body
+{
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -22,22 +27,22 @@ body {
     background-position: center;
     background-attachment: fixed;
     height: 100vh;
-
 }
 
-.links {
+.links
+{
     list-style: none;
     padding: 0;
-
 }
 
-.links li {
-
+.links li
+{
     max-width: 50%;
     margin: 20px;
 }
 
-.links a {
+.links a
+{
     display: block;
     background-color: #fff;
     color: #333;
@@ -50,21 +55,25 @@ body {
     /*實線白框*/
 }
 
-.links a:hover {
+.links a:hover
+{
     background-color: transparent;
     /* 按鈕背景透明 */
     color: rgb(255, 255, 255)
 }
 
-.links a img {
+.links a img
+{
     height: 15px;
 }
 
-#df {
+#df
+{
     border-radius: 100%;
 }
 
-#link_btn {
+#link_btn
+{
     max-width: 680px;
     margin: 0 auto;
     padding: 20px;
